<resources>
    <string name="app_name">NoYouPick</string>

    <string name="pick_movie">Pick a Movie</string>
    <string name="pick_tv_show">Pick a TV Show</string>
    <string name="pick_both">Pick from Both</string>

    <string name="submit_caps">SUBMIT</string>
    <string name="next_caps">NEXT</string>

    <string name="first_step_instructions">First, select the <b>type of media</b> you would like to watch.</string>
    <string name="second_step_instructions">Now select the <b>genres</b> you are interested in watching.</string>

    <string name="poster_content_description">Media poster image</string>
    <string name="like_button">Like Button</string>
    <string name="dislike_button">Dislike Button</string>
    <string name="rewind_button">Rewind Button</string>
    <string name="discover">DISCOVER</string>

    <string name="director">DIRECTOR</string>
    <string name="cast">CAST</string>
    <string name="cast_poster_content_desc">pictures of main cast</string>
    <string name="user_rating">User Rating: %1$d/10</string>
    <string name="sample_movie_desc">101-year-old Rose DeWitt Bukater tells the story of her life aboard the Titanic, 84 years later. A young Rose boards the ship with her mother and fiancé. Meanwhile, Jack Dawson and Fabrizio De Rossi win third-class tickets aboard the ship. Rose tells the whole story from Titanic\'s departure through to its death—on its first and last voyage—on April 15, 1912.\"</string>

</resources>