<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/landing_page_background"
    tools:context=".landing.LandingActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_step_instructions"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="24sp"
            android:padding="30dp"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="bottom">

            <TextView
                android:id="@+id/btnPickMovie"
                android:text="@string/pick_movie"
                style="@style/user_selection_rectangle" />

            <TextView
                android:id="@+id/btnPickTelevision"
                android:text="@string/pick_tv_show"
                style="@style/user_selection_rectangle" />


            <!--Button BG should turn white with black text once user selects an option-->
            <TextView
                android:id="@+id/btnNext"
                android:text="@string/next_caps"
                style="@style/user_selection_submit_button" />

        </LinearLayout>

</LinearLayout>