<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity"
    android:orientation="vertical"
    android:background="@drawable/landing_page_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_step_instructions"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="24sp"
        android:padding="30dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="bottom">

        <TextView
            android:id="@+id/btnPickMovie"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/pick_movie"
            android:background="@drawable/button_rectangular_stroke_background"
            android:padding="30dp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            />

        <TextView
            android:id="@+id/btnPickTelevision"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/pick_tv_show"
            android:background="@drawable/button_rectangular_stroke_background"
            android:padding="30dp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            />

        <TextView
            android:id="@+id/btnPickBoth"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/pick_both"
            android:background="@drawable/button_rectangular_stroke_background"
            android:padding="30dp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            />

        <!--Button BG should turn white with black text once user selects an option-->
        <TextView
            android:id="@+id/btnSubmitMediaTypeChoice"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/submit_caps"
            android:background="@color/unselected_submit_button_background"
            android:padding="30dp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/unselected_submit_button_text"
            android:textStyle="bold"
            android:textSize="22sp"
            />

    </LinearLayout>

</LinearLayout>