<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <View
        android:id="@+id/whiteBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backdrop"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/poster_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/purple_200" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginTop="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/poster_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/off_black" />

    <TextView
        android:id="@+id/userRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/poster"
        app:layout_constraintLeft_toRightOf="@id/poster"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backdrop"
        tools:text="User rating: 5.6/10" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@color/white"
        android:maxLines="2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="20dp"
        android:textColor="@color/off_black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/poster"
        tools:text="Titanic" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:ellipsize="end"
        android:maxLines="20"
        android:paddingBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@string/sample_movie_desc" />

    <TextView
        android:id="@+id/directorHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview"
        android:text="@string/director" />

    <TextView
        android:id="@+id/director"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directorHeader"
        tools:text="Martin Scorsese" />

    <TextView
        android:id="@+id/castHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/director"
        android:text="@string/cast" />

    <TextView
        android:id="@+id/cast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/castHeader"
        tools:text="Robert DeNiro\nLeonardo Dicaprio" />

    <View
        android:id="@+id/bottomMarginFill"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cast"/>

</androidx.constraintlayout.widget.ConstraintLayout>