<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <View
        android:id="@+id/whiteBackground"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/off_black"/>

    <ImageView
        android:id="@+id/backdrop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/poster_content_description"
        android:scaleType="centerCrop"
        android:foreground="@color/transparent_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/purple_200" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/poster_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_corners"
        tools:background="@color/off_black" />

    <TextView
        android:id="@+id/userRating"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/poster"
        android:textAlignment="center"
        tools:text="User rating: 5.6/10"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@color/white"
        android:maxLines="2"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/off_black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/poster"
        tools:text="Titanic" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/rounded_corners_bottom"
        android:ellipsize="end"
        android:maxLines="4"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@string/sample_movie_desc" />

    <TextView
        android:id="@+id/directorHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview"
        android:text="@string/director" />

    <TextView
        android:id="@+id/directorOrCreator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directorHeader"
        tools:text="Martin Scorsese" />

    <TextView
        android:id="@+id/castHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directorOrCreator"
        android:text="@string/cast" />

    <TextView
        android:id="@+id/cast"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/castHeader"
        tools:text="Robert DeNiro\nLeonardo Dicaprio" />

    <View
        android:id="@+id/bottomMarginFill"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>